fixed the overflowing text in the title
relates #179

--- a/frontend/src/style/OccupationCard.css
+++ b/frontend/src/style/OccupationCard.css
@@ -25,7 +25,7 @@
   text-justify: center;
   margin-top: 0;
   border-radius: 0 7vmin 0 0;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 .overview {
